--- a/index.css
+++ b/index.css
@@ -101,104 +101,6 @@ h1{
     color: white;
     margin-left: 20%;
 }
-
-  form input{
-      padding: 12px;
-      /* margin: 0px; */
-      margin-bottom: 20px;
-      /* margin-top: 10%;
-          /* float: center; */
-          width: 90%;
-          border-radius: 10px;
-          background-color: #D9D9D9;
-          border:none;
-          font-size: 20px;
-          font-style: normal;
-          color: black;
-          margin-left: 0.8;
-          padding-left: 10%;
-  }
-  #user{
-     float: left;
-     margin-left: 0.6%;
-     position: absolute;
-     margin-top: 1%;
-     
-  }
-  #key{
-    float: left;
-    margin-left: 0.6%;
-    position: absolute;
-    margin-top: 1%;
-    
- }
-  ::placeholder{
-      color: black;
-  }
-  button{
-    padding: 6px;
-     border-radius: 10%;
-    margin-left: 50px;
-    background-color: rgb(255, 255, 255);
-    border: rgb(111, 152, 175);
-    width: 110px;
-    /* background-size: 100% 200%;
-    background-position: 0% 0%;
-    background-image: linear-gradient(to right, transparent 50%, #FE4880 50%); */
-  }
-
- button.login{
-    padding: 15px;
-    margin-left: 35%;
-    background-color:#D9D9D9;
-    border:none ;
-    width: 100px;
-    margin-right: 20%;
-   margin-top: 10%;
-   border-radius: 10px;
-   text-decoration: none;
-  }
-  button a.login{
-    text-decoration: none;
-    color: black;
-}
-
-  button.SignUp{
-    padding: 8px;
-    margin-right: 5%;
-    background-color:#D9D9D9;
-    border:none ;
-    width: 100px;
-   float: right;
-   margin-top: -10%;
-   border-radius: 10px;
-  }
-  button.JoinUs{
-    padding: 8px;
-    margin-right: 5%;
-    background-color:#D9D9D9;
-    border:none ;
-    width: 100px;
-   float: right;
-   border-radius: 10px;
-   margin-top: 10%;
-  }
-  button a.JoinUs{
-    text-decoration: none;
-    color: black;
-  }
-  a.signUp{
-      text-decoration: none;
-      margin-left: 82%;
-      margin-bottom: 400px;
-  }
-div.more{
-    padding: 16px;
-    margin-left: 65px;
-    background-color: rgb(111, 152, 175);
-    border: rgb(111, 152, 175);
-    width: 110px;
-}
  li a:hover{
    color: rgb(26, 23, 23); 
     width: 10px;
@@ -245,18 +147,52 @@ div.more{
    
 
 } 
+
 .footer4{
     background-color:  #C7EEF6;
-    height: 450px;
+    height: 500px;
     margin-left: 0%;
     margin-top: -0%;
     display: flex;
     text-decoration: none;
     opacity: 0.8;
     align-content: space-between;
-   
 
 } 
+.client{
+    margin-left: 40%;
+    margin-top: 10%;
+    font-size: 18px;
+    color: rgb(134, 127, 127);
+}
+.footer5{
+    background-color:  #ffffff;
+    height: 320px;
+    margin-left: 0%;
+    margin-top: 0%;
+    display: flex;
+    text-decoration: none;
+    opacity: 0.8;
+    align-content: space-between;
+
+} 
+
+
+.footer6{
+    background-color:  #941a1a;
+    height: 250px;
+    margin-left: -1000px;
+    margin-top: 5%;
+    display: flex;
+}
+.footer7{
+    background-color:  #76D7C4;
+    height: 400px;
+    margin-left: -1000px;
+    margin-top: 0%;
+    display: flex;
+}
+
 .trans{
     margin-left: 30%;
     margin-top: 20%;
@@ -266,8 +202,13 @@ div.more{
     margin-top: 5%;
 }
 div.footer_1{
+    
     height: 450px;
     width: 80%;
+}
+.footer4 div.footer_1{
+   margin-top: 0%;
+   padding-bottom: 2%;
 }
 #footer_o{
    /* background-color: rgb(128, 0, 0); */
@@ -307,21 +248,138 @@ div.footer_1{
     
   }
   #footer_oooo{
- background-color: rgb(61, 59, 59); 
+ background-color: #ffffff; 
     margin-left: 0%;
-    width: 60%;
+    width: 40%;
     /* width: 60%; */
  }
  #footer_left{
-    background-color: rgb(24, 226, 165); 
+    background-color: #ffffff; 
        margin-left: 0%;
-       width: 50%;
+       width: 40%;
        /* width: 60%; */
     }
 
  #footer_wwww{
-     background-color: rgb(236, 198, 198);
-     width: 20%;
+     background-color: #ffffff;
+     width: 40%;
+     margin-left: 0%;
     
   }
+  .footer_edit{
 
+       margin-top: 2%;
+    }
+    .heading h3{
+        margin-top: 15%;
+        width: 80%;
+        margin-left: 15%;
+        color: rgb(53, 52, 52);
+
+    }
+    .Emily{
+        margin-left: 15%;
+        margin-top: 15%;
+        padding-bottom: 70px;
+    }
+    .Emily h3{
+        margin-top: -10px;
+        color: rgb(53, 52, 52);
+    }
+    
+    .photo{
+        width: 10%;
+        height: 20%;
+       
+        position: absolute;
+        margin-left: 10%;
+        border-radius: 80%;
+        margin-top: -8%;
+        
+    }
+    .photo img{
+        width: 80%;
+        border-radius: 50%;
+    }
+    #footer_wwww6{
+        background-color: #c20f0f;
+        width: 40%;
+        margin-left: 0%;
+       
+     }
+.f6{
+
+    
+    height: 400px;
+    width: 25%;
+    margin-right: 0%;
+    
+}
+
+#f6_a{
+    background-color: rgb(192, 79, 79);
+    margin-left: 2%;
+    
+}
+#f6_b{
+    background-color: rgb(0, 0, 0);
+    
+}
+#f6_c{
+    background-color: rgb(186, 198, 204);
+}
+#f6_d{
+    background-color: rgb(207, 219, 226);
+}
+#f6_a img{
+    height: 400px;
+    width: 85%;
+    margin-top: 0%;
+    margin-left: 20%;
+}
+#f6_b img{
+    height: 400px;
+    width: 100%;
+    margin-top: 0%;
+    margin-left: 0%;
+}
+#f6_c img{
+    height: 400px;
+    width: 100%;
+    margin-top: 0%;
+    margin-left: 0%;
+}
+#f6_d img{
+    height: 400px;
+    width: 100%;
+    margin-top: 0%;
+    margin-left: 0%;
+}
+.footer7 ul{
+    margin-top: 7%;
+    margin-left: 21%;
+}
+.footer7 h1{
+    margin-top: 14% ;
+    margin-left: 51%;
+    position: absolute;
+    color: #0E6655;
+}
+.footer7 ul li a{
+color: #0e4d40;
+}
+.footer7 ul li a:hover{
+color: white;
+background-color: #76D7C4;
+}
+.socialmedia {
+    margin-top: 22% ;
+    margin-left: -25%;
+    color: #0E6655;
+}
+a{
+    color: #0E6655;
+}
+a:hover{
+    color: white;
+}
